<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:scrollbarSize="7dp"
    android:scrollbarThumbHorizontal="@drawable/circle_blue_btn"
    android:scrollbarThumbVertical="@drawable/circle_blue_btn"
    tools:context=".ui.subject.verification.VerificationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FAFAFA"

        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/backButton"
                android:padding="18dp"
                >
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    app:srcCompat="@drawable/arrowleftblack"
                    />

            </LinearLayout>

            <TextView
                android:id="@+id/textLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_toEndOf="@id/backButton"
                android:text="@string/additional_settings"
                android:textColor="#333333"
                android:textSize="20sp"

                />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="23dp"
                android:layout_height="28dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="14dp"

                android:layout_alignParentRight="true"


                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:srcCompat="@drawable/facecoolicon" />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foregroundGravity="center"
            android:layout_below="@id/header"
            android:background="#ECECEC"
            >
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            >
            <androidx.legacy.widget.Space
                android:layout_width="match_parent"
                android:layout_height="45dp" />
            <Button
                android:id="@+id/deleteSubjects"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"

                android:backgroundTint="#CF203C"

                android:padding="10dp"
                android:text="@string/delete_all_subjects"
                android:textColor="@color/white"

                />


            <Button
                android:id="@+id/historyImportExport"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"

                android:backgroundTint="#132558"

                android:padding="10dp"
                android:text="@string/face_log_export_import"
                android:textColor="@color/white"

                />

            <Button
                android:id="@+id/delete_face_log"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"

                android:backgroundTint="#CF203C"

                android:padding="10dp"
                android:text="@string/delete_face_log"
                android:textColor="@color/white"

                />


            <Button
                android:id="@+id/resources"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:text="Resources Monitor"
                android:backgroundTint="#132558"

                />



            <Button
                android:id="@+id/logs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:text="App Logs"
                android:backgroundTint="#CF203C"

                />

            <Button
                android:id="@+id/fullDatabaseImportExport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:text="@string/app_database_export_import"
                android:backgroundTint="#132558"

                />

            <Button
                android:id="@+id/advancedSettingsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:text="Advanced Settings"
                android:backgroundTint="#CF203C"

                />


            <androidx.legacy.widget.Space
                android:layout_width="match_parent"
                android:layout_height="45dp" />

        </LinearLayout>
            </androidx.cardview.widget.CardView>


        </ScrollView>


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>