<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:scrollbarSize="7dp"
    android:scrollbarThumbHorizontal="@drawable/circle_blue_btn"
    android:scrollbarThumbVertical="@drawable/circle_blue_btn"
    tools:context=".ui.subject.verification.VerificationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FAFAFA"

        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/backButton"
                android:padding="18dp"
                >
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    app:srcCompat="@drawable/arrowleftblack"
                    android:contentDescription="TODO" />

            </LinearLayout>

            <TextView
                android:id="@+id/textLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_toEndOf="@id/backButton"
                android:text="@string/app_logs"

                android:textColor="#333333"
                android:textSize="20sp"

                tools:ignore="RelativeOverlap" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="23dp"
                android:layout_height="28dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="14dp"
                android:layout_alignParentEnd="true"


                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:srcCompat="@drawable/facecoolicon"
                android:contentDescription="TODO" />

        </RelativeLayout>


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabsHeader"
            android:layout_below="@id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            >
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crash_logs"
                >

            </com.google.android.material.tabs.TabItem>

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other_logs"
                >

            </com.google.android.material.tabs.TabItem>


        </com.google.android.material.tabs.TabLayout>


        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_below="@id/tabsHeader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >



        </androidx.viewpager.widget.ViewPager>






    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>